parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARROW
    ASYNC
    CALLBACK
    COMMA
    FLOAT
    INT
    LSQRBRACK
    POW
    RETURN
    RSQRBRACK
    SEMICOLON

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> expression MINUS term
Rule 3     expression -> MINUS term
Rule 4     expression -> term
Rule 5     term -> FUNC LPAREN RPAREN LBRACES expression RBRACES
Rule 6     term -> SWITCH expression LBRACES CASE expression COLON expression DEFAULT COLON expression RBRACES
Rule 7     term -> IF LPAREN comparison RPAREN term
Rule 8     term -> IF LPAREN comparison RPAREN term ELSE term
Rule 9     comparison -> expression EQUAL term
Rule 10    comparison -> expression NOTEQ term
Rule 11    comparison -> expression LARGE term
Rule 12    comparison -> expression SMALL term
Rule 13    comparison -> expression LRGEQ term
Rule 14    comparison -> expression SMLEQ term
Rule 15    comparison -> term EQUAL term
Rule 16    comparison -> term NOTEQ term
Rule 17    comparison -> term LARGE term
Rule 18    comparison -> term SMALL term
Rule 19    term -> WHILE LPAREN comparison RPAREN term
Rule 20    term -> FOR LPAREN ID IN factor RPAREN term
Rule 21    term -> term TIMES factor
Rule 22    term -> term DIVIDE factor
Rule 23    term -> ID EQUALS factor
Rule 24    term -> term SHL factor
Rule 25    term -> term SHR factor
Rule 26    term -> term MOD factor
Rule 27    term -> term ANDLOGIC factor
Rule 28    term -> term ORLOGIC factor
Rule 29    term -> term XORLOGIC factor
Rule 30    term -> OPEN LPAREN factor RPAREN
Rule 31    term -> VAR COLON TYPINT ID EQUALS factor
Rule 32    term -> VAR COLON TYPSTRING ID EQUALS factor
Rule 33    term -> LET ID EQUALS factor
Rule 34    term -> PRINT term
Rule 35    term -> factor
Rule 36    factor -> NUMBER
Rule 37    factor -> DECIMAL
Rule 38    factor -> STRING
Rule 39    factor -> EXIT
Rule 40    factor -> HELP
Rule 41    factor -> COPYRIGHT
Rule 42    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

ANDLOGIC             : 27
ARROW                : 
ASYNC                : 
CALLBACK             : 
CASE                 : 6
COLON                : 6 6 31 32
COMMA                : 
COPYRIGHT            : 41
DECIMAL              : 37
DEFAULT              : 6
DIVIDE               : 22
ELSE                 : 8
EQUAL                : 9 15
EQUALS               : 23 31 32 33
EXIT                 : 39
FLOAT                : 
FOR                  : 20
FUNC                 : 5
HELP                 : 40
ID                   : 20 23 31 32 33
IF                   : 7 8
IN                   : 20
INT                  : 
LARGE                : 11 17
LBRACES              : 5 6
LET                  : 33
LPAREN               : 5 7 8 19 20 30 42
LRGEQ                : 13
LSQRBRACK            : 
MINUS                : 2 3
MOD                  : 26
NOTEQ                : 10 16
NUMBER               : 36
OPEN                 : 30
ORLOGIC              : 28
PLUS                 : 1
POW                  : 
PRINT                : 34
RBRACES              : 5 6
RETURN               : 
RPAREN               : 5 7 8 19 20 30 42
RSQRBRACK            : 
SEMICOLON            : 
SHL                  : 24
SHR                  : 25
SMALL                : 12 18
SMLEQ                : 14
STRING               : 38
SWITCH               : 6
TIMES                : 21
TYPINT               : 31
TYPSTRING            : 32
VAR                  : 31 32
WHILE                : 19
XORLOGIC             : 29
error                : 

Nonterminals, with rules where they appear

comparison           : 7 8 19
expression           : 1 2 5 6 6 6 6 9 10 11 12 13 14 42 0
factor               : 20 21 22 23 24 25 26 27 28 29 30 31 32 33 35
term                 : 1 2 3 4 7 8 8 9 10 11 12 13 14 15 15 16 16 17 17 18 18 19 20 21 22 24 25 26 27 28 29 34

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . MINUS term
    (4) expression -> . term
    (5) term -> . FUNC LPAREN RPAREN LBRACES expression RBRACES
    (6) term -> . SWITCH expression LBRACES CASE expression COLON expression DEFAULT COLON expression RBRACES
    (7) term -> . IF LPAREN comparison RPAREN term
    (8) term -> . IF LPAREN comparison RPAREN term ELSE term
    (19) term -> . WHILE LPAREN comparison RPAREN term
    (20) term -> . FOR LPAREN ID IN factor RPAREN term
    (21) term -> . term TIMES factor
    (22) term -> . term DIVIDE factor
    (23) term -> . ID EQUALS factor
    (24) term -> . term SHL factor
    (25) term -> . term SHR factor
    (26) term -> . term MOD factor
    (27) term -> . term ANDLOGIC factor
    (28) term -> . term ORLOGIC factor
    (29) term -> . term XORLOGIC factor
    (30) term -> . OPEN LPAREN factor RPAREN
    (31) term -> . VAR COLON TYPINT ID EQUALS factor
    (32) term -> . VAR COLON TYPSTRING ID EQUALS factor
    (33) term -> . LET ID EQUALS factor
    (34) term -> . PRINT term
    (35) term -> . factor
    (36) factor -> . NUMBER
    (37) factor -> . DECIMAL
    (38) factor -> . STRING
    (39) factor -> . EXIT
    (40) factor -> . HELP
    (41) factor -> . COPYRIGHT
    (42) factor -> . LPAREN expression RPAREN

    MINUS           shift and go to state 3
    FUNC            shift and go to state 4
    SWITCH          shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    ID              shift and go to state 10
    OPEN            shift and go to state 12
    VAR             shift and go to state 13
    LET             shift and go to state 14
    PRINT           shift and go to state 15
    NUMBER          shift and go to state 16
    DECIMAL         shift and go to state 17
    STRING          shift and go to state 18
    EXIT            shift and go to state 19
    HELP            shift and go to state 20
    COPYRIGHT       shift and go to state 21
    LPAREN          shift and go to state 5

    expression                     shift and go to state 1
    term                           shift and go to state 2
    factor                         shift and go to state 11

state 1

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    PLUS            shift and go to state 22
    MINUS           shift and go to state 23


state 2

    (4) expression -> term .
    (21) term -> term . TIMES factor
    (22) term -> term . DIVIDE factor
    (24) term -> term . SHL factor
    (25) term -> term . SHR factor
    (26) term -> term . MOD factor
    (27) term -> term . ANDLOGIC factor
    (28) term -> term . ORLOGIC factor
    (29) term -> term . XORLOGIC factor

    PLUS            reduce using rule 4 (expression -> term .)
    MINUS           reduce using rule 4 (expression -> term .)
    $end            reduce using rule 4 (expression -> term .)
    RPAREN          reduce using rule 4 (expression -> term .)
    LBRACES         reduce using rule 4 (expression -> term .)
    RBRACES         reduce using rule 4 (expression -> term .)
    COLON           reduce using rule 4 (expression -> term .)
    DEFAULT         reduce using rule 4 (expression -> term .)
    TIMES           shift and go to state 24
    DIVIDE          shift and go to state 25
    SHL             shift and go to state 26
    SHR             shift and go to state 27
    MOD             shift and go to state 28
    ANDLOGIC        shift and go to state 29
    ORLOGIC         shift and go to state 30
    XORLOGIC        shift and go to state 31


state 3

    (3) expression -> MINUS . term
    (5) term -> . FUNC LPAREN RPAREN LBRACES expression RBRACES
    (6) term -> . SWITCH expression LBRACES CASE expression COLON expression DEFAULT COLON expression RBRACES
    (7) term -> . IF LPAREN comparison RPAREN term
    (8) term -> . IF LPAREN comparison RPAREN term ELSE term
    (19) term -> . WHILE LPAREN comparison RPAREN term
    (20) term -> . FOR LPAREN ID IN factor RPAREN term
    (21) term -> . term TIMES factor
    (22) term -> . term DIVIDE factor
    (23) term -> . ID EQUALS factor
    (24) term -> . term SHL factor
    (25) term -> . term SHR factor
    (26) term -> . term MOD factor
    (27) term -> . term ANDLOGIC factor
    (28) term -> . term ORLOGIC factor
    (29) term -> . term XORLOGIC factor
    (30) term -> . OPEN LPAREN factor RPAREN
    (31) term -> . VAR COLON TYPINT ID EQUALS factor
    (32) term -> . VAR COLON TYPSTRING ID EQUALS factor
    (33) term -> . LET ID EQUALS factor
    (34) term -> . PRINT term
    (35) term -> . factor
    (36) factor -> . NUMBER
    (37) factor -> . DECIMAL
    (38) factor -> . STRING
    (39) factor -> . EXIT
    (40) factor -> . HELP
    (41) factor -> . COPYRIGHT
    (42) factor -> . LPAREN expression RPAREN

    FUNC            shift and go to state 4
    SWITCH          shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    ID              shift and go to state 10
    OPEN            shift and go to state 12
    VAR             shift and go to state 13
    LET             shift and go to state 14
    PRINT           shift and go to state 15
    NUMBER          shift and go to state 16
    DECIMAL         shift and go to state 17
    STRING          shift and go to state 18
    EXIT            shift and go to state 19
    HELP            shift and go to state 20
    COPYRIGHT       shift and go to state 21
    LPAREN          shift and go to state 5

    term                           shift and go to state 32
    factor                         shift and go to state 11

state 4

    (5) term -> FUNC . LPAREN RPAREN LBRACES expression RBRACES

    LPAREN          shift and go to state 33


state 5

    (42) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . MINUS term
    (4) expression -> . term
    (5) term -> . FUNC LPAREN RPAREN LBRACES expression RBRACES
    (6) term -> . SWITCH expression LBRACES CASE expression COLON expression DEFAULT COLON expression RBRACES
    (7) term -> . IF LPAREN comparison RPAREN term
    (8) term -> . IF LPAREN comparison RPAREN term ELSE term
    (19) term -> . WHILE LPAREN comparison RPAREN term
    (20) term -> . FOR LPAREN ID IN factor RPAREN term
    (21) term -> . term TIMES factor
    (22) term -> . term DIVIDE factor
    (23) term -> . ID EQUALS factor
    (24) term -> . term SHL factor
    (25) term -> . term SHR factor
    (26) term -> . term MOD factor
    (27) term -> . term ANDLOGIC factor
    (28) term -> . term ORLOGIC factor
    (29) term -> . term XORLOGIC factor
    (30) term -> . OPEN LPAREN factor RPAREN
    (31) term -> . VAR COLON TYPINT ID EQUALS factor
    (32) term -> . VAR COLON TYPSTRING ID EQUALS factor
    (33) term -> . LET ID EQUALS factor
    (34) term -> . PRINT term
    (35) term -> . factor
    (36) factor -> . NUMBER
    (37) factor -> . DECIMAL
    (38) factor -> . STRING
    (39) factor -> . EXIT
    (40) factor -> . HELP
    (41) factor -> . COPYRIGHT
    (42) factor -> . LPAREN expression RPAREN

    MINUS           shift and go to state 3
    FUNC            shift and go to state 4
    SWITCH          shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    ID              shift and go to state 10
    OPEN            shift and go to state 12
    VAR             shift and go to state 13
    LET             shift and go to state 14
    PRINT           shift and go to state 15
    NUMBER          shift and go to state 16
    DECIMAL         shift and go to state 17
    STRING          shift and go to state 18
    EXIT            shift and go to state 19
    HELP            shift and go to state 20
    COPYRIGHT       shift and go to state 21
    LPAREN          shift and go to state 5

    expression                     shift and go to state 34
    term                           shift and go to state 2
    factor                         shift and go to state 11

state 6

    (6) term -> SWITCH . expression LBRACES CASE expression COLON expression DEFAULT COLON expression RBRACES
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . MINUS term
    (4) expression -> . term
    (5) term -> . FUNC LPAREN RPAREN LBRACES expression RBRACES
    (6) term -> . SWITCH expression LBRACES CASE expression COLON expression DEFAULT COLON expression RBRACES
    (7) term -> . IF LPAREN comparison RPAREN term
    (8) term -> . IF LPAREN comparison RPAREN term ELSE term
    (19) term -> . WHILE LPAREN comparison RPAREN term
    (20) term -> . FOR LPAREN ID IN factor RPAREN term
    (21) term -> . term TIMES factor
    (22) term -> . term DIVIDE factor
    (23) term -> . ID EQUALS factor
    (24) term -> . term SHL factor
    (25) term -> . term SHR factor
    (26) term -> . term MOD factor
    (27) term -> . term ANDLOGIC factor
    (28) term -> . term ORLOGIC factor
    (29) term -> . term XORLOGIC factor
    (30) term -> . OPEN LPAREN factor RPAREN
    (31) term -> . VAR COLON TYPINT ID EQUALS factor
    (32) term -> . VAR COLON TYPSTRING ID EQUALS factor
    (33) term -> . LET ID EQUALS factor
    (34) term -> . PRINT term
    (35) term -> . factor
    (36) factor -> . NUMBER
    (37) factor -> . DECIMAL
    (38) factor -> . STRING
    (39) factor -> . EXIT
    (40) factor -> . HELP
    (41) factor -> . COPYRIGHT
    (42) factor -> . LPAREN expression RPAREN

    MINUS           shift and go to state 3
    FUNC            shift and go to state 4
    SWITCH          shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    ID              shift and go to state 10
    OPEN            shift and go to state 12
    VAR             shift and go to state 13
    LET             shift and go to state 14
    PRINT           shift and go to state 15
    NUMBER          shift and go to state 16
    DECIMAL         shift and go to state 17
    STRING          shift and go to state 18
    EXIT            shift and go to state 19
    HELP            shift and go to state 20
    COPYRIGHT       shift and go to state 21
    LPAREN          shift and go to state 5

    expression                     shift and go to state 35
    term                           shift and go to state 2
    factor                         shift and go to state 11

state 7

    (7) term -> IF . LPAREN comparison RPAREN term
    (8) term -> IF . LPAREN comparison RPAREN term ELSE term

    LPAREN          shift and go to state 36


state 8

    (19) term -> WHILE . LPAREN comparison RPAREN term

    LPAREN          shift and go to state 37


state 9

    (20) term -> FOR . LPAREN ID IN factor RPAREN term

    LPAREN          shift and go to state 38


state 10

    (23) term -> ID . EQUALS factor

    EQUALS          shift and go to state 39


state 11

    (35) term -> factor .

    TIMES           reduce using rule 35 (term -> factor .)
    DIVIDE          reduce using rule 35 (term -> factor .)
    SHL             reduce using rule 35 (term -> factor .)
    SHR             reduce using rule 35 (term -> factor .)
    MOD             reduce using rule 35 (term -> factor .)
    ANDLOGIC        reduce using rule 35 (term -> factor .)
    ORLOGIC         reduce using rule 35 (term -> factor .)
    XORLOGIC        reduce using rule 35 (term -> factor .)
    PLUS            reduce using rule 35 (term -> factor .)
    MINUS           reduce using rule 35 (term -> factor .)
    $end            reduce using rule 35 (term -> factor .)
    RPAREN          reduce using rule 35 (term -> factor .)
    LBRACES         reduce using rule 35 (term -> factor .)
    EQUAL           reduce using rule 35 (term -> factor .)
    NOTEQ           reduce using rule 35 (term -> factor .)
    LARGE           reduce using rule 35 (term -> factor .)
    SMALL           reduce using rule 35 (term -> factor .)
    LRGEQ           reduce using rule 35 (term -> factor .)
    SMLEQ           reduce using rule 35 (term -> factor .)
    RBRACES         reduce using rule 35 (term -> factor .)
    COLON           reduce using rule 35 (term -> factor .)
    DEFAULT         reduce using rule 35 (term -> factor .)
    ELSE            reduce using rule 35 (term -> factor .)


state 12

    (30) term -> OPEN . LPAREN factor RPAREN

    LPAREN          shift and go to state 40


state 13

    (31) term -> VAR . COLON TYPINT ID EQUALS factor
    (32) term -> VAR . COLON TYPSTRING ID EQUALS factor

    COLON           shift and go to state 41


state 14

    (33) term -> LET . ID EQUALS factor

    ID              shift and go to state 42


state 15
